fixed stats not showing

--- a/components/sections/stats/NetPosition.module.scss
+++ b/components/sections/stats/NetPosition.module.scss
@@ -20,3 +20,8 @@
 .hr {
 	margin: 2.5rem 0 1.5rem 0;
 }
+
+.noDebts {
+	margin-top: 1rem;
+	color: var(--green);
+}
